--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: jyeany/hello-world-javascript-action@v1.1
+        uses: jyeany/hello-world-javascript-action@1.1
         with:
           who-to-greet: 'Newman'
 
