--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
           who-to-greet: 'Newman'
 
       - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}
+        run: echo "The time was ${{ steps.hello.outputs.time }}"
